ISSUE #235 - Fixed white space at bottom tree, expand icon not shown for nodes with children without names

--- a/frontend/tree/css/tree.css
+++ b/frontend/tree/css/tree.css
@@ -1,3 +1,20 @@
+tree .virtualRepeatInfiniteScroll {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100%;
+}
+
+tree .virtualRepeatInfiniteScroll .vertical-container {
+  height: 100%;
+  width: 100%;
+}
+
+tree .virtualRepeatInfiniteScroll .repeated-item {
+  cursor: default;
+  padding: 0 0;
+  min-height: 1px;
+}
+
 tree span {
   outline: none;
   margin: 0;
@@ -68,28 +85,14 @@ tree .parentOfInvisible {
 }
 
 /** Tree filter list **************************************************************************************************/
-
-tree .virtualRepeatInfiniteScroll {
-  overflow-y: auto;
-  overflow-x: hidden;
-  height: 100%;
+tree .filterNode {
+  height: 41px;
 }
 
-tree .virtualRepeatInfiniteScroll .vertical-container {
+tree .filterNode div {
   height: 100%;
-  width: 100%;
-}
-
-tree .virtualRepeatInfiniteScroll .repeated-item {
-  cursor: default;
-  padding: 0 0;
-  min-height: 1px;
 }
 
 tree .filterListNodeName {
   margin-left: 15px !important;
-}
-
-.viewerSelected {
-  color: #F00;
 }
